-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0, 5.1.0
-
macOS 10.7, clang 3.0
-
-
b4869b8e9324c1614333066a6cc5d0df0d7b6af9
FAIL! : tst_MacNativeEvents::testMouseLeftDoubleClick() 'expected.waitForAllEvents()' returned FALSE. (the test did not receive all expected events!)
Loc: [tst_macnativeevents.cpp(137)]
FAIL! : tst_MacNativeEvents::stressTestMouseLeftDoubleClick() 'expected.waitForAllEvents()' returned FALSE. (the test did not receive all expected events!)
Loc: [tst_macnativeevents.cpp(164)]
FAIL! : tst_MacNativeEvents::testDragWindow() 'expected.waitForAllEvents()' returned FALSE. (the test did not receive all expected events!)
Loc: [tst_macnativeevents.cpp(269)]
FAIL! : tst_MacNativeEvents::testMouseEnter() 'expected.waitForAllEvents()' returned FALSE. (the test did not receive all expected events!)
Loc: [tst_macnativeevents.cpp(291)]
FAIL! : tst_MacNativeEvents::testKeyPressOnToplevel() Compared values are not the same
Actual (e1->key()): 97
Expected (e2->key()): 65
Loc: [expectedeventlist.cpp(155)]
FAIL! : tst_MacNativeEvents::testKeyPressOnToplevel() Compared values are not the same
Actual (e1->key()): 97
Expected (e2->key()): 65
Loc: [expectedeventlist.cpp(155)]
FAIL! : tst_MacNativeEvents::testModifierShift() Compared values are not the same
Actual (e1->key()): 65
Expected (e2->key()): 16777248
Loc: [expectedeventlist.cpp(155)]
FAIL! : tst_MacNativeEvents::testModifierShift() 'expected.waitForAllEvents()' returned FALSE. (the test did not receive all expected events!)
Loc: [tst_macnativeevents.cpp(437)]
FAIL! : tst_MacNativeEvents::testModifierAlt() Compared values are not the same
Actual (e1->key()): 97
Expected (e2->key()): 16777251
Loc: [expectedeventlist.cpp(155)]
FAIL! : tst_MacNativeEvents::testModifierAlt() 'expected.waitForAllEvents()' returned FALSE. (the test did not receive all expected events!)
Loc: [tst_macnativeevents.cpp(458)]
FAIL! : tst_MacNativeEvents::testModifierCtrl() Compared values are not the same
Actual (e1->key()): 97
Expected (e2->key()): 16777250
Loc: [expectedeventlist.cpp(155)]
FAIL! : tst_MacNativeEvents::testModifierCtrl() 'expected.waitForAllEvents()' returned FALSE. (the test did not receive all expected events!)
Loc: [tst_macnativeevents.cpp(484)]
FAIL! : tst_MacNativeEvents::testModifierCtrlWithDontSwapCtrlAndMeta() Compared values are not the same
Actual (e1->key()): 97
Expected (e2->key()): 16777250
Loc: [expectedeventlist.cpp(155)]
FAIL! : tst_MacNativeEvents::testModifierCtrlWithDontSwapCtrlAndMeta() 'expected.waitForAllEvents()' returned FALSE. (the test did not receive all expected events!)
Loc: [tst_macnativeevents.cpp(517)]
- is required for
-
QTBUG-24131 Autotests for Qt 5.0 on OSX
-
- Closed
-
- relates to
-
QTBUG-35968 support native event in qtestlib
-
- Open
-
-
QTBUG-26804 tst_MacNativeEvents::testDragWindow() is unstable on Mac OS X
-
- Closed
-
-
QTBUG-50772 Key event and shortcut handling cleanup
-
- Closed
-
For Gerrit Dashboard: QTBUG-22775 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
95056,3 | OS X: Handle Qt::AA_MacDontSwapCtrlAndMeta for regular key events | 5.4 | qt/qtbase | Status: ABANDONED | +1 | 0 |
109445,4 | Tests: Use blacklist for failing tests in tst_macnativevents | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |
151266,3 | OS X: Respect AA_MacDontSwapCtrlMeta when converting the key modifiers | 5.6 | qt/qtbase | Status: ABANDONED | -1 | 0 |
195412,3 | Cocoa: Make AA_MacDontSwapCtrlMeta work | dev | qt/qtbase | Status: MERGED | +2 | 0 |